--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/tvtext"
@@ -12,7 +13,9 @@
         android:id="@+id/cityList"
         android:layout_width="442dp"
         android:layout_height="754dp"
-
+        android:focusable="false"
 
         />
+
+
 </LinearLayout>
