--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,26 +28,27 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/headers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/headers"
-                android:text="Ваш город: "
+                android:gravity="center"
 
-                android:textSize="20sp"
-                android:gravity="center"/>
+                android:text="Ваш город: "
+                android:textSize="18sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/header"
                 android:textColor="#7f32a8"
                 android:gravity="center"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:text=" "/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:text="Скорость ветра: "
                 android:gravity="center"/>
             <TextView
@@ -56,37 +57,48 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/headesr"
                 android:textColor="#7f32a8"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:text=" "/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Температура: "
                 android:layout_gravity="right"
+                android:gravity="center"
+                android:text="Температура: "
 
-                android:gravity="center"/>
+                android:textSize="18sp" />
+
+
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/temp"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 android:layout_gravity="right"
                 android:textColor="#de1d10"
                 android:gravity="center"/>
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:layout_gravity="right"
+                android:gravity="center"
                 android:text="Описание погоды: "
-                android:gravity="center"/>
+                android:textSize="18sp" />
+
+
+
+
+
             <TextView
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="19sp"
+                android:textSize="18sp"
                 android:layout_gravity="right"
 
                 android:textColor="#7f32a8"
