--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -5,7 +5,25 @@
     android:orientation="vertical"
     android:layout_width="100dp"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ветер">
 
+    </TextView>
+    <TextView
+        android:id="@+id/wind"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="">
+
+    </TextView>
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_width="60dp"
+
+        android:background="@drawable/ic_baseline_arrow_upward_24"
+        android:layout_height="60dp"/>
     <ImageView
         android:id="@+id/weather_icon"
         android:layout_width="match_parent"
@@ -20,10 +38,7 @@
         android:id="@+id/weather_temp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Время"/>
+
     <TextView
         android:id="@+id/weather_time"
         android:layout_width="match_parent"
